fix(ui): make timers much more readable

--- a/src/app/shared/components/card-slot/card-slot.component.scss
+++ b/src/app/shared/components/card-slot/card-slot.component.scss
@@ -34,9 +34,12 @@
 
   .timer {
     position: absolute;
+    color: #000;
+    text-shadow: none;
     width: 100%;
     text-align: center;
     bottom: 0;
+    left: 1px;
     letter-spacing: 2px;
   }
 
